fix: fixed contrast issues insdie the <body>, <Hero />, <Pricing />, and <Footer />. New color scheme is closer to initial design

--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,7 @@ select {
   --brand-fff: #ffffff;
   --brand-white: #f1f1f1;
   --brand-black: #231f20;
-  --brand-green: #567f27;
+  --brand-green: #8dc63f;
   --brand-green-btn: #6a9e2f;
   --brand-grey: #59595b;
   --background: oklch(1 0 0);
